--- a/hive/css/scrolling-nav.css
+++ b/hive/css/scrolling-nav.css
@@ -44,7 +44,8 @@ The padding is very important to make sure the scrollspy picks up the right area
 of those sections to manage the look and feel of the site. */
 
 .intro-section {
-
+    height: 30%;
+    padding-top: 50px;
     text-align: center;
     background: #fff;
 }
