--- a/css/projectpage.css
+++ b/css/projectpage.css
@@ -1,10 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300);
-@font-face {
-	font-family: 'Varela Round';
-	src: url('../fonts/VarelaRound-Regular.ttf');
-	src: local('VarelaRound-Regular'), local('Varela Round'), url('../fonts/VarelaRound-Regular.ttf') format('truetype');
-}
+@import url(https://fonts.googleapis.com/css?family=Quicksand:300);
+@import url('https://fonts.googleapis.com/css?family=Montserrat:600|Nunito');
 
+@font-face {
+	font-family: 'Montserrat', sans-serif;
+    font-family: 'Nunito', sans-serif;
+}
 
 
 header{
@@ -16,7 +16,7 @@ header{
 
 header a{
 	font-size: 20px;
-	font-family: 'VarelaRound-Regular';
+	font-family: 'Montserrat',sans-serif;
 	color: grey;
 	text-decoration: underline;
 	position: fixed;
@@ -27,7 +27,7 @@ header a{
 body.page{
 
 	
-   font-family: 'Open Sans';
+   font-family: 'Nunito';
    font-size: 17px;
    text-align: left;
    line-height: 35px;
@@ -48,7 +48,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 
 body.page h1{
 
-	font-family: 'Varela Round';
+	font-family: 'Montserrat';
     text-align: center;
     margin-top: 2%;
     font-size: 50px;
@@ -57,9 +57,9 @@ body.page h1{
 
 body.page h3{
 
-	font-family: 'Varela Round';
+	font-family: 'Montserrat';
 	font-size: 25px;
-	letter-spacing: 3px;
+	letter-spacing: 1px;
 	margin-top: 5%;
 	
 
@@ -67,14 +67,14 @@ body.page h3{
 
 body.page h5{
 
-	font-family: 'Quicksand';
+	font-family: 'Montserrat';
 	
 }
 
 body.page h4{
 
-	font-family: 'Varela Round';
-	letter-spacing: 3px;
+	font-family: 'Montserrat';
+	letter-spacing: 1px;
 	
 }
 
